namespace ZLab6.Entities;

public interface IObserver
{
    void Update(string message);

}